added : website logo and fixed gitignore

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seal Example Apps</title>
-
+    <link rel="shortcut icon" href="logo.jpeg" type="image/jpeg">
     <style>
       /*
   Josh's Custom CSS Reset
